<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffefebe7">
    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >
    <ImageView
        android:id="@+id/titleBg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#106184" 
        android:contentDescription="@string/main_navigation_catagory"/>

    <ImageView
        android:id="@+id/progressImage"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:background="@drawable/android_title_bg_progress"
        android:visibility="gone" 
        android:contentDescription="@string/main_navigation_catagory"/>

    <Button
        android:id="@+id/titleRightButton"
        style="\@style/title_right_button"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="2.0dip"
        android:visibility="gone" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:padding="10.0dip"
        android:singleLine="true"
        android:text="@string/main_code_buy"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>

     <RelativeLayout
         android:id="@+id/regist_scroller_relative"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/top_relative"
         android:layout_marginTop="100dp"
         android:padding="10.0dip" >

    
         <TextView
             android:id="@+id/Card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10.0dip"
             android:layout_marginTop="20.0dip"
             android:paddingTop="10.0dip"
             android:text="@string/Account"
             android:textColor="@color/black" />

         <EditText
             android:id="@+id/Card_display"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/Card"
             android:layout_toRightOf="@+id/Card"
             android:background="@drawable/edit_text_x"
             android:singleLine="true"
             android:textColor="#4A4A4A"
             android:hint="@string/add" >
             <requestFocus />
         </EditText>
         <TextView
             android:id="@+id/telephone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10.0dip"
             android:layout_marginTop="20.0dip"
             android:paddingTop="10.0dip"
             android:layout_below="@id/Card"
             android:text="@string/phone"
             android:textColor="@color/black" />

         <EditText
             android:id="@+id/telephone_display"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/telephone"
             android:layout_toRightOf="@+id/telephone"
             android:background="@drawable/edit_text_x"
             android:hint="@string/add_phone"
             android:textColor="#4A4A4A"
             android:singleLine="true" >
             <requestFocus />
         </EditText>
         <TextView
             android:id="@+id/paypay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10.0dip"
             android:layout_marginTop="20.0dip"
             android:paddingTop="10.0dip"
             android:layout_below="@id/telephone"
             android:text="@string/paypay"
             android:textColor="@color/black" />

         <EditText
             android:id="@+id/paypay_display"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/paypay"
             android:layout_toRightOf="@+id/paypay"
             android:inputType="textPassword"
             android:textColor="#4A4A4A"
             android:background="@drawable/edit_text_x"
             android:singleLine="true" >
             <requestFocus />
         </EditText>
         
     </RelativeLayout>

     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/top_relative"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="42dp"
         android:text="@string/gen" />

     <Button
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/btn_ok"
         android:layout_alignBottom="@+id/btn_ok"
         android:layout_alignLeft="@+id/button3"
         android:layout_marginLeft="70dp"
         android:text="@string/btn_cancel" />

     <Button
         android:id="@+id/btn_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/button3"
         android:layout_below="@+id/regist_scroller_relative"
         android:layout_marginRight="60dp"
         android:layout_marginTop="27dp"
         android:text="@string/btn_ok" />

</RelativeLayout>