<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffefebe7" >

    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >

        <ImageView
            android:id="@+id/titleBg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#106184"
            android:contentDescription="@string/QRcode" />

        <ImageView
            android:id="@+id/progressImage"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:background="@drawable/android_title_bg_progress"
            android:contentDescription="@string/QRcode"
            android:visibility="gone" />

        <Button
            android:id="@+id/titleRightButton"
            style="\@style/title_right_button"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="2.0dip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10.0dip"
            android:singleLine="true"
            android:text="@string/QRcode"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/regist_scroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_relative"
        android:background="#ffefebe7" >

        <RelativeLayout
            android:id="@+id/regist_scroller_relative"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10.0dip" >

            <Button
                android:id="@+id/btn_scan_barcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/open_camera" />
           

            <TextView
                android:id="@+id/tv_scan_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

           
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/regist_scroller"
        android:layout_marginLeft="16dp"
        android:text="@string/scan_result"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

     <EditText
         android:id="@+id/et_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="17dp"
         android:textColor="#4A4A4A"
         android:ems="10"
         android:hint="@string/user_name" />
     
     <EditText
         android:id="@+id/et_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_toRightOf="@+id/et_name"
         android:layout_marginTop="17dp"
         android:ems="10"
         android:textColor="#4A4A4A"
         android:hint="@string/money" />

    <Button
        android:id="@+id/btn_add_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/et_name"
        android:layout_marginLeft="28dp"
        android:text="@string/Generate_QRcode" />

    <Button
        android:id="@+id/save"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_add_qrcode"
        android:layout_alignBottom="@+id/btn_add_qrcode"
        android:layout_marginLeft="31dp"
        android:layout_toRightOf="@+id/btn_add_qrcode"
        android:text="@string/save" />
     <ImageView
                android:id="@+id/iv_qr_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="250dp"
                android:gravity="center"
                android:contentDescription="@id/iv_qr_image" />

</RelativeLayout>