<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffefebe7">
    
    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >

    <ImageView
        android:id="@+id/titleBg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#106184" 
        android:contentDescription="@string/main_navigation_home"/>

    <ImageView
        android:id="@+id/progressImage"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:background="@drawable/android_title_bg_progress"
        android:visibility="gone"
        android:contentDescription="@string/main_navigation_home" />

    <Button
        android:id="@+id/titleRightButton"
        style="\@style/title_right_button"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="2.0dip"
        android:visibility="gone" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="15sp"
        android:padding="10.0dip"
        android:text="@string/main_navigation_home"
        android:textColor="@color/white"
        android:singleLine="true" />
</RelativeLayout>
	<RelativeLayout 
	    android:id="@+id/regist_scroller_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >
	    </RelativeLayout>

	<Button
	    android:id="@+id/recharge"
	    android:layout_width="145.0dip"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/top_relative"
	    android:layout_marginTop="100dp"
	    android:background="@drawable/android_big_button_x"
	    android:gravity="center"
	    android:text="@string/recharge"
	    android:textColor="#ff000000"
	    android:textSize="20.0dp" />

	<Button
	    android:id="@+id/pay"
	    android:layout_width="145.0dip"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/recharge"
	    android:layout_alignBottom="@+id/recharge"
	    android:layout_alignParentRight="true"
	    android:background="@drawable/android_big_button_x"
	    android:gravity="center"
	    android:text="@string/pay"
	    android:textColor="#ff000000"
	    android:textSize="20.0dp" />

</RelativeLayout>
